force-app/main/default/objects/ssot__CourseOffering__dlm/fields/ssot__AcademicTermId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AcademicTermId__c</fullName>
    <label>Academic Term</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AcademicTermId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>