force-app/main/default/objects/ssot__CourseOffering__dlm/fields/ssot__CalendarPeriod__c.field-meta.xml
<CustomField>
    <fullName>ssot__CalendarPeriod__c</fullName>
    <label>Calendar Period</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CalendarPeriod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>