force-app/main/default/objects/ssot__CourseOffering__dlm/fields/ssot__EnrolleeCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnrolleeCount__c</fullName>
    <label>Enrollee Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnrolleeCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>