force-app/main/default/objects/ssot__CourseOffering__dlm/fields/ssot__EnrollmentCapacityQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__EnrollmentCapacityQuantity__c</fullName>
    <label>Enrollment Capacity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EnrollmentCapacityQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>