force-app/main/default/objects/ssot__CourseOffering__dlm/fields/ssot__LearningCourseId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearningCourseId__c</fullName>
    <label>Learning Course</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearningCourseId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>