force-app/main/default/objects/ssot__CourseOffering__dlm/fields/ssot__PrimaryFacultyId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryFacultyId__c</fullName>
    <label>Primary Faculty</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryFacultyId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>