force-app/main/default/objects/ssot__CourseOffering__dlm/fields/ssot__rel_1719817598751_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817598751_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseOffering_AcademicTermId_map_Ac_rel</label>
    <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
    <relationshipLabel>CourseOffering_AcademicTermId_map_Ac_rel</relationshipLabel>
    <relationshipName>rel_1719817598751_end</relationshipName>
    <type>Lookup</type>
</CustomField>