force-app/main/default/objects/ssot__CourseOffering__dlm/fields/ssot__rel_1719819885459_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819885459_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseOffering_LearningCourseId_map__rel</label>
    <referenceTo>ssot__LearningCourse__dlm</referenceTo>
    <relationshipLabel>CourseOffering_LearningCourseId_map__rel</relationshipLabel>
    <relationshipName>rel_1719819885459_end</relationshipName>
    <type>Lookup</type>
</CustomField>