force-app/main/default/objects/ssot__CourseOffering__dlm/fields/ssot__rel_1720291147107_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291147107_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseOffering_PrimaryFacultyId_map__rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>CourseOffering_PrimaryFacultyId_map__rel</relationshipLabel>
    <relationshipName>rel_1720291147107_end</relationshipName>
    <type>Lookup</type>
</CustomField>