force-app/main/default/objects/ssot__CourseOffering__dlm/fields/ssot__SectionNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SectionNumber__c</fullName>
    <label>Section</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SectionNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>