force-app/main/default/objects/ssot__CourseOffering__dlm/fields/ssot__WaitlistCapacityQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__WaitlistCapacityQuantity__c</fullName>
    <label>Waitlist Capacity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WaitlistCapacityQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>